--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "grunt-contrib-watch": "0.5.3",
     "grunt-contrib-uglify": "0.6.0",
     "grunt-string-replace": "^0.2.7"
+  },
+  "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "freeboard-aws-iot-ws-mqtt": "^1.0.3",
+    "moment": "^2.24.0",
+    "paho-mqtt": "^1.1.0"
   }
 }
